--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Matovu Ronald",
   "license": "MIT",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^11.0.1",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^11.0.1",
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
